dist/watchstate/Deployment.watchstate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/managed-by: generators
    app.kubernetes.io/name: watchstate
  name: watchstate
  namespace: watchstate
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: watchstate-watchstate-deployment-c8f5cd85
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: watchstate
        cdk8s.io/metadata.addr: watchstate-watchstate-deployment-c8f5cd85
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: WS_API_AUTO
              value: "true"
            - name: WS_CRON_IMPORT_ARGS
              value: (empty)
            - name: WS_CRON_EXPORT_ARGS
              value: (empty)
          image: ghcr.io/arabcoders/watchstate
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            tcpSocket:
              port: 8080
          name: watchstate
          ports:
            - containerPort: 8080
          readinessProbe:
            failureThreshold: 3
            tcpSocket:
              port: 8080
          resources:
            limits:
              memory: 1536Mi
            requests:
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          startupProbe:
            failureThreshold: 60
            periodSeconds: 5
            tcpSocket:
              port: 8080
          volumeMounts:
            - mountPath: /config
              name: pvc-config
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: pvc-config
          persistentVolumeClaim:
            claimName: config
            readOnly: false
