dist/watchstate/Service.watchstate.yaml
apiVersion: v1
kind: Service
metadata:
  name: watchstate
  namespace: watchstate
spec:
  externalIPs: []
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    cdk8s.io/metadata.addr: watchstate-watchstate-deployment-c8f5cd85
  type: ClusterIP
